--- a/1107.2138/Opus-Magnum-final.tex
+++ b/1107.2138/Opus-Magnum-final.tex
@@ -2987,16 +2987,16 @@ _{z}^{\left(  n\right)  }\hat{\sigma}_{z}^{\left(  p\right)  }$, recovered here 
 \begin{equation}
 \mytext{\textcurrency HM2=\textcurrency \qquad}
 \hat{H}_{{\rm M}}=-\frac{J_2N}{2}\hat{m}^{2}=
--\frac{J_2}{2N}\sum_{i,j=1}^N\hat\sigma_z^{(i)}\hat\sigma_z^{(j)}, \qquad (q=2).
-\label{HM2=} \nn
+-\frac{J_2}{2N}\sum_{i,j=1}^N\hat\sigma_z^{(i)}\hat\sigma_z^{(j)}, \quad (q=2).
+\label{HM2=} 
 \end{equation}
 Likewise, the first-order case is exemplified by letting $J_2=0$, keeping in (\ref{HA}) only the quartic ``super-exchange'' term:
 
 \begin{equation}
 \mytext{\textcurrency HM4=\textcurrency \qquad}
 \hat{H}_{{\rm M}}=-\frac{J_4N}{4}\hat{m}^{4}=-\frac{J_4}{4N^3}\sum_{i,j,k,l=1}^N
-\hat\sigma_z^{(i)}\hat\sigma_z^{(j)}\hat\sigma_z^{(k)}\hat\sigma_z^{(l)}, \qquad (q=4).
-\label{HM4=} \nn
+\hat\sigma_z^{(i)}\hat\sigma_z^{(j)}\hat\sigma_z^{(k)}\hat\sigma_z^{(l)}, \quad (q=4).
+\label{HM4=} 
 \end{equation}
 
 The more physical case (\ref{HA}) of mixtures of $q=2$ and $q=4$ terms will not differ qualitatively from either one of the two pure cases 
@@ -3127,11 +3127,11 @@ bath, and $\hat{D}$ for ${\rm S}+{\rm M}$ after elimination of the bath
 (as depicted schematically in Fig. 3.2), according to
 
 \begin{equation}
-\hat{r}={\rm {\rm tr}}_{{\rm A}}{\hat{{\cal D}}}{,\qquad}
-\hat{{\cal R}} ={\rm {\rm tr}}_{{\rm S}}{\hat{{\cal D}}}{,\qquad}
-\hat{R}_{\rm M}={\rm tr}_{\rm B}\hat{{\cal R}} ={\rm tr}_{{\rm S},{\rm B}}{\hat{{\cal D}}}{,\qquad}\hat{R}_{{\rm B}
+\hat{r}={\rm {\rm tr}}_{{\rm A}}{\hat{{\cal D}}}{,\quad}
+\hat{{\cal R}} ={\rm {\rm tr}}_{{\rm S}}{\hat{{\cal D}}}{,\quad}
+\hat{R}_{\rm M}={\rm tr}_{\rm B}\hat{{\cal R}} ={\rm tr}_{{\rm S},{\rm B}}{\hat{{\cal D}}}{,\quad}\hat{R}_{{\rm B}
 }={\rm {\rm tr}}_{{\rm S},\,{\rm M}}{\hat{{\cal D}}
-}{\rm ,\qquad}\hat{D}={\rm {\rm tr}}_{{\rm B}}{\hat
+}{\rm ,\quad}\hat{D}={\rm {\rm tr}}_{{\rm B}}{\hat
 {{\cal D}}}{\rm  .} \label{reducedDM=}
 \end{equation}
 The expectation value of any observable $\hat A$ pertaining, for instance, to the subsystem S + M of S + A 
@@ -3180,7 +3180,7 @@ We shall also use the partial traces (see again Fig. 3.2)
 
 \begin{equation}
 \mytext{\textcurrency Rij\textcurrency \qquad}
-\hat{R}_{ij}={\rm {\rm tr}}_{{\rm B}}{\hat {\cal R}}_{ij},{\qquad
+\hat{R}_{ij}={\rm {\rm tr}}_{{\rm B}}{\hat {\cal R}}_{ij},{
 \qquad}\hat{D}={\rm {\rm tr}}_{{\rm B}}{\hat {\cal D}}=
 \left( \begin{array}{ccc@{\ }r}
 \hat{R}_{\uparrow\uparrow} & \hat{R}_{\uparrow\downarrow}\\
@@ -3224,10 +3224,10 @@ Notice that we now have from (\ref{reducedDM=}) --  (\ref{Rij})
 
 \begin{equation}
 \mytext{\textcurrency reducedDM2=\textcurrency \qquad}
-r_{ij} ={\rm {\rm tr}}_{{\rm A}}{\hat{{\cal R}}_{ij}} ={\rm {\rm tr}}_{{\rm M}}{\hat{{R}}_{ij}}   {,\qquad}
-\hat{{\cal R}} = {\hat {\cal R}}_{\uparrow\uparrow} +{\hat {\cal R}}_{\downarrow\downarrow},\qquad
+r_{ij} ={\rm {\rm tr}}_{{\rm A}}{\hat{{\cal R}}_{ij}} ={\rm {\rm tr}}_{{\rm M}}{\hat{{R}}_{ij}}   {,\quad}
+\hat{{\cal R}} = {\hat {\cal R}}_{\uparrow\uparrow} +{\hat {\cal R}}_{\downarrow\downarrow},\quad
 \hat{{R}}_{{\rm M}}={\hat{R}}_{\uparrow\uparrow} +{\hat{R}}_{\downarrow\downarrow}
-{,\qquad}\hat{R}_{{\rm B}}= {\rm {\rm tr}}_{{\rm M}}({\hat {\cal R}}_{\uparrow\uparrow} +{\hat {\cal R}}_{\downarrow\downarrow}){\rm  .} 
+{,\quad}\hat{R}_{{\rm B}}= {\rm {\rm tr}}_{{\rm M}}({\hat {\cal R}}_{\uparrow\uparrow} +{\hat {\cal R}}_{\downarrow\downarrow}){\rm  .} 
 \label{reducedDM2=}
 \end{equation}
 
@@ -3277,9 +3277,9 @@ can derive the {\it probabilities $P_{\rm M}^{\rm dis}\left(  m\right)$ for $\ha
 $m$, where ``dis'' denotes their discreteness. These $N+1$ eigenvalues,
 
 \begin{equation}
-\mytext{\textcurrency eig\textcurrency \qquad}
-m=-1{\rm ,\qquad}-1+\frac{2}
-{N}{\rm ,\qquad}\ldots{\rm,\qquad}1-\frac{2}{N}{\rm ,\qquad}1{\rm ,}
+\mytext{\textcurrency eig\textcurrency}
+m=-1,\, -1+\frac{2}
+{N}\, , \, \cdots\, , \, 1-\frac{2}{N}\, , \,1
 \label{eig}
 \end{equation}
 have equal spacings $\delta m=2/N$ and multiplicities
@@ -3294,9 +3294,8 @@ G\left(  m\right) &=&\frac{N!}{\left[  \frac{1}{2}N\left(  1+m\right)  \right]  
 \EEA
 Denoting by $\delta_{\hat{m},m}$ the projection operator on the subspace $m$
 of $\hat{m}$, the dimension of which is $G\left(  m\right)  $, we have
-
 \BEQ
-P_{\rm M}^{\rm dis}\left(  m,t\right)  ={\rm tr}_{\rm M}\hat{R}_{\rm M}(t)\delta_{\hat{m},m}.
+P_{\rm M}^{\rm dis}\left(  m,t\right)  = {\rm tr}_{\rm M}\hat{R}_{\rm M}(t)\delta_{\hat{m},m}.
 \label{R->P}
 \EEQ 
 In the limit $N\gg1$,  where $m$ becomes basically a continuous variable, we shall later work with the functions $P_{\rm M}(m,t)$
@@ -3344,13 +3343,12 @@ values of $m$, with $[P_{ij}^{\rm dis}\left(  m\right)]^{\ast}=P_{ji}^{\rm dis}\
 All statistical properties of ${\rm S}+{\rm M}$\ at the considered
 time can then be expressed in terms of these functions $P_{ij}^{\rm dis}\left(
 m\right)  $. Indeed the combinations
-
 \begin{equation}
-\mytext{\textcurrency P->C\textcurrency \qquad}
+\mytext{\textcurrency P->C\textcurrency}
 C_{x}^{\rm dis}\left(  m\right)  =P^{\rm dis}_{\uparrow\downarrow}(m)+
-P^{\rm dis}_{\downarrow\uparrow}(m),{\qquad\qquad}
+P^{\rm dis}_{\downarrow\uparrow}(m),{\qquad}
 C^{\rm dis}_{y}=iP^{\rm dis}_{\uparrow\downarrow}-iP^{\rm dis}_{\downarrow\uparrow}
-{,\qquad\qquad}
+{,\qquad}
 C^{\rm dis}_{z}=P^{\rm dis}_{\uparrow\uparrow}-P^{\rm dis}_{\downarrow\downarrow} 
 \label{P->C}%
 \end{equation}
@@ -3438,7 +3436,7 @@ function $K\left(  t\right)  $ in (\ref{Kt-s}).  We introduce the Fourier transf
 \begin{equation}
 \mytext{\textcurrency TF\textcurrency \qquad}
 \tilde{K}\left(  \omega\right)
-=\int_{-\infty}^{+\infty}{\rm d}t\ e^{-i\omega t}K\left(  t\right),\qquad
+=\int_{-\infty}^{+\infty}{\rm d}t\ e^{-i\omega t}K\left(  t\right),\quad
 K(t)=\frac{1}{2\pi}\int_{-\infty}^{+\infty}{\rm d}\omega \,e^{i\omega t}\tilde K\left(  \omega\right)
 \label{TF}
 \end{equation}
