--- a/1107.2138/Opus-Magnum-final.tex
+++ b/1107.2138/Opus-Magnum-final.tex
@@ -53,6 +53,19 @@ bookmarksopenlevel=10
 \usepackage[papersize={7.5in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 \tolerance=2000
 \hbadness=2000
+\usepackage[T1]{fontenc}
+\usepackage{textcomp}
+\usepackage[altbullet]{lucidabr}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+
+% the lucida varphi is hideous
+\DeclareSymbolFont{greekletters}{OML}{zplm}{m}{it}
+\DeclareMathSymbol{\varphi}{\mathord}{greekletters}{"27}
+
+\input{../helpers/fix-underbrace.tex}
 
 \usepackage[small]{titlesec}
 \usepackage{amsmath}
@@ -1000,7 +1013,6 @@ section~\ref{fin1.1.2}, the fact that simply tracing out A may lead to a (weakly
 a well known weakness of some models~\cite{blokhintsev1,blokhintsev2,deMuynck,ABNqm2003,requardt}.
  
 }%EndZeText
-\newpage
 \subsubsection{Entropy changes in a measurement}
 \label{section.1.2.4}
 \label{fin1.2.4}
@@ -1358,7 +1370,6 @@ for an arbitrary subensemble of runs (sections~\ref{fin11.2.3} and \ref{fin11.2.
 
 }%EndZeText
 
-\newpage
 \subsubsection{Outline}
 \label{section.1.3.2}
 
@@ -3000,7 +3011,7 @@ Likewise, the first-order case is exemplified by letting $J_2=0$, keeping in (\r
 \end{equation}
 
 The more physical case (\ref{HA}) of mixtures of $q=2$ and $q=4$ terms will not differ qualitatively from either one of the two pure cases 
-$q=2$ or $q=4$. It will therefore be sufficient for our purpose, in section 7, to illustrate the two situations $J_2 > 3J_4$ and $J_2<3J_4$ 
+$q=2$ or $q=4$. It will therefore be sufficient for our purpose, in section \ref{fin7}, to illustrate the two situations $J_2 > 3J_4$ and $J_2<3J_4$ 
 by working out the Hamiltonians (\ref{HM2=}) and (\ref{HM4=}), respectively.     
 We may summarize these two cases by $H_{\rm M}=-(NJ/q)\hat m^q$ with $q=2$ or $4$, respectively.
 
@@ -3232,7 +3243,7 @@ r_{ij} ={\rm {\rm tr}}_{{\rm A}}{\hat{{\cal R}}_{ij}} ={\rm {\rm tr}}_{{\rm M}}{
 \end{equation}
 
 All these elements are functions of the time $t$ which elapses from the beginning of the measurement at  $t=0$ when $\hat H_{\rm SA}$ is switched on to 
-the final value  $t_{\rm f}$ that we will evaluate in section 7. To introduce further notation, we mention that the combined system S + A = S + M + B should end up in
+the final value  $t_{\rm f}$ that we will evaluate in section \ref{fin7}. To introduce further notation, we mention that the combined system S + A = S + M + B should end up in
 
 \begin{equation}
 \hat{\cal D}(t_{\rm f})=
@@ -3689,7 +3700,7 @@ m,t\right)  $ including the final regime where it is expected to tend to
 $P_{{\rm M}\Uparrow}\left(  m\right)  $ or $P_{{\rm M}\Downarrow}\left(  m\right)  $,
 and will determine in particular the lifetime of the metastable state (\ref{RA0=}). We
 focus here on equilibrium only. For later convenience we include an external
-field $h$ acting on the spins of the apparatus, so as to arrive from (\ref{HM=}) at\footnote{In section 7 we shall identify $h$ with $+g$ in the sector
+field $h$ acting on the spins of the apparatus, so as to arrive from (\ref{HM=}) at\footnote{In section \ref{fin7} we shall identify $h$ with $+g$ in the sector
  $\hat R_{\up\up}$ of $\hat D$, or with $-g$ in its sector $\hat R_{\down\down}$, 
 where $g$ is the coupling between S and A, while a true field in the $y$-direction will be introduced in section 8.2 and denoted by $b$, see Eq. (\ref{HS})}
 
@@ -3891,6 +3902,9 @@ check, however, that the lifetime of the initial state is larger than the durati
 
 
 }%EndZeText
+
+\newpage
+
 \renewcommand{\thesection}{\arabic{section}}
 \section{Equations of motion}
 \setcounter{equation}{0}\setcounter{figure}{0}\renewcommand{\thesection}{\arabic{section}.}
@@ -6248,7 +6262,7 @@ onto the frequency $\Omega=2g/\hbar$ associated with the precession of the spins
  $g_n$. For the more efficient mechanism of suppression of recurrences of subsection 6.2, we have just stressed that it is a decoherence process arising 
  from the phonon thermal bath but {\it steered by the spin-magnet coupling}.
  
- In section 7, we turn to the most essential role of the bath B in the measurement, to allow the registration of the outcome by the pointer.
+ In section \ref{fin7}, we turn to the most essential role of the bath B in the measurement, to allow the registration of the outcome by the pointer.
 
 }%EndZeText
 
@@ -7387,7 +7401,9 @@ the large value of $N$, which makes $\tau_{{\rm trunc}}$ small.
 \myskipfigText{
 \begin{figure}[h!]
 \label{figABN11}
+\begin{center}
 \includegraphics[width=8cm]{FigOpMag11}
+\end{center}
 \caption{
 The registration process for quartic interactions $(q=4)$.
 The probability density $P(m,t)=P_{\uparrow\uparrow}(m,t)/r_{\uparrow\uparrow}(0)$ 
@@ -7451,12 +7467,12 @@ $q=2$ in the Markovian regime. This will allow us to deal with an arbitrary
 initial condition. The \textit{Green's function} $G(m,m^{\prime},t-t^{\prime
 })$ is characterized by the equation
 
-\begin{equation}
+\begin{multline}
 \mytext{\textcurrency dGfor\textcurrency \qquad}
 \frac{\partial}{\partial t}G(m,m^{\prime},t-t^{\prime})+\frac{\partial}{\partial m}[v(m)G(m,m^{\prime},t-t^{\prime})]
--\frac{1}{N}\frac{\partial^2}{\partial m^2}[w(m)G(m,m^{\prime},t-t^{\prime})]=\delta(m-m^{\prime})\delta(t-t^{\prime}){ ,}
+-\frac{1}{N}\frac{\partial^2}{\partial m^2}[w(m)G(m,m^{\prime},t-t^{\prime})]\\=\delta(m-m^{\prime})\delta(t-t^{\prime}){ ,}
 \label{dGfor}
-\end{equation}
+\end{multline}
 with $G(m,m^{\prime},t-t^{\prime})=0$ for $t<t^{\prime}$. We have replaced the initial time $0$ by a running time $t^{\prime}$ in
 order to take advantage of the convolution property of $G$. The functions $v(m)$ and $w(m)$ defined by (\ref{Vsm}) and (\ref{Wsm})
 involve a field $h$ which stands either for an applied external
@@ -8188,12 +8204,12 @@ The reader interested only in the results will find them in subsection 9.5.
 In the above sections, we have relied on the large number $N$ of degrees of freedom of the magnet M. As the statistical
 fluctuations of the magnetization $m$ are then weak, the magnet can behave as a macroscopic pointer with classical features.
 Moreover the truncation time $\tau_{\rm trunc}$ is the shortest among all the characteristic times (section \ref{fin5}) because it behaves as
-${1}/\sqrt{N}$. The large value of $N$ was also used (section 7) to describe the registration process  by means of a partial
+${1}/\sqrt{N}$. The large value of $N$ was also used (section \ref{fin7}) to describe the registration process  by means of a partial
 differential equation. It is natural to wonder whether a small value of $N$ can preserve the characteristic properties of a
 quantum measurement. Actually the irreversibility of any measurement process (subsection 6.2) requires the apparatus to be
 large. In subsection~\ref{section.6.1}, we showed that the irreversibility of the truncation can be ensured by a large value of $N$ and a
 randomness in the couplings $g_n$, $n=1,\cdots, N$ (subsection 6.2); but this irreversibility, as well as that of the registration
-(section 7), can also be caused by the large size of the bath. For small $N$, the irreversibility of both the truncation and the
+(section \ref{fin7}), can also be caused by the large size of the bath. For small $N$, the irreversibility of both the truncation and the
 registration should be ensured by the bath. We now study the extreme situation in which $N=2$.
 
 }%EndZeText
@@ -8804,8 +8820,6 @@ be determined by means of an apparatus with classical features.
 
 }%EndZeText
 
-\newpage
-
 \subsubsection{Can one simultaneously ``measure'' non-commuting variables?}
 \label{section.8.1.6}
 
@@ -8867,8 +8881,6 @@ With this setup we can also repeat measurements in the $z$-direction and see how
 
 
 }%EndZeText
-
-\newpage
 
 \subsection{Measuring a non-conserved quantity}
 \label{section.8.2}
@@ -9071,7 +9083,6 @@ probability distribution $P_{\rm M}(m,t)$. The slow evolution of $P_{\rm M}(m,t)
 
 We first eliminate the off-diagonal contributions by formally
 solving (\ref{offb}) as 
-
 \begin{equation}  
 \label{elim}
 P_{\uparrow\downarrow}(m,t)=P_{\downarrow\uparrow}^\ast=
@@ -9092,7 +9103,6 @@ $\hat R_{\downarrow\uparrow}$ of the density matrix $\hat D$ of S + M. In compen
 R_{\downarrow\downarrow}$ may be progressively eroded through the right-hand side of (\ref{upb}) and (\ref{downb}).
 
 At lowest order in $b$, we can rewrite explicitly the second term of (\ref{elim}) by replacing $P_{\uparrow\uparrow}$ by
-
 \begin{eqnarray} 
 \label{Pb=0} 
 P^{(0)}_{\uparrow\uparrow}(m,t)&=&r_{\uparrow\uparrow}(0)
@@ -9206,11 +9216,12 @@ Because $1-{\rm erfc}(z)={\rm erf}(z)$ is imaginary for imaginary values of  $z$
 in this approximation, while $\langle \hat s_y\hat m^k(t)\rangle$
 involves an extra factor $\Delta m^k$, for instance:
 %involves an extra factor $\Delta m$, %^k=\delta_0^k/N^{k/2}$, for instance:
-
-\BEA
-\langle\hat s_y\hat m(t)\rangle&=&\frac{b}{gN}\langle\hat s_z(0)\rangle=\frac{b\,\Delta m^2}{g\delta_0^2}\langle\hat s_z(0)\rangle , \qquad
+\begin{equation}
+\langle\hat s_y\hat m(t)\rangle=\frac{b}{gN}\langle\hat s_z(0)\rangle=\frac{b\,\Delta m^2}{g\delta_0^2}\langle\hat s_z(0)\rangle , \qquad
+\end{equation}
+\[
 \langle\hat s_y\hat m^2(t)\rangle =\frac{b\delta_0\sqrt{2}}{gN^{3/2}}\frac{t}{\tau_{\rm leak}} =\frac{b\sqrt{2}\,\Delta m^3}{g\delta_0^2}\, \frac{t}{\tau_{\rm leak}}.
- \EEA 
+\]
  To understand these behaviors, we remember that the spin S is
 submitted to the field $b$ in the $y$-direction and to the random
 field $Ngm$ in the $z$-direction, where $m$ has a fluctuation
@@ -9348,7 +9359,6 @@ s_z(t)\rangle$, $\langle \hat m(t)\rangle$, $\langle \hat s_z\hat
 m(t)\rangle$ issued from (\ref{P1upb}) and (\ref{P2upb}). For
 times $t\gg\tau_\trunc $ and $t$ not much longer than $\tau_{\rm
 reg}$, we find
-
 \BEA
 \label{sztb} 
 \langle \hat s_z(t)\rangle&=&\int{\rm d}m\left[
@@ -9368,7 +9378,6 @@ r_{\uparrow\uparrow}(0)-r_{\downarrow\downarrow}(0)
 \EEA
 we noted that only short times $t'$, $t''$ and $t'-t''$ contribute.
 A similar calculation provides
-
 \begin{equation}  \label{mtb} 
 \langle \hat m(t)\rangle=\int{\rm d}m\,m
 \left[P_{\uparrow\uparrow}(m,t)+P_{\downarrow\downarrow}(m,t)\right]=
@@ -9379,22 +9388,23 @@ $\langle \hat s_z(0)\rangle$ expected for an ideal measurement.
 The ratio $\langle \hat m(t)\rangle/\langle \hat s_z(t)\rangle$
 is, however, the same as in section~\ref{section.7} where $b=0$. Finally the
 correlation is obtained as
-\BEA
+\begin{align}
 \label{szmtb} 
-\langle \hat s_z\hat m(t)\rangle&=&
+\langle \hat s_z\hat m(t)\rangle&=
 \int{\rm d}m\, m
 \left[P_{\uparrow\uparrow}(m,t)-P_{\downarrow\downarrow}(m,t)\right]=
 m_{\rm B}\left(e^{t/\tau_{\rm reg}}-1\right) \nn\\
-&&+\frac{4b}{\hbar}\Re\int_0^t{\rm d}t' r_{\uparrow\downarrow}(0)
+&+\frac{4b}{\hbar}\Re\int_0^t{\rm d}t' r_{\uparrow\downarrow}(0)
 2ig\delta_0^2\frac{t'}{\hbar}e^{t/\tau_{\rm reg}}
 \exp\left[-\left(\frac{t'}{\tau_\trunc }\right)^2\right]\nn\\
-&&
+&
 -\frac{4b^2}{\hbar^2}\Re\int_0^t{\rm d}t'\int_0^{t'}{\rm d}t''
-\left(\mu''+2ig\delta_0^2\frac{t'-t''}{\hbar}e^{t/\tau_{\rm reg}}\right)
-\exp\left[-\left(\frac{t'-t''}{\tau_\trunc }\right)^2+2i\frac{t''}{\tau_{\rm leak}}
+\left(\mu''+2ig\delta_0^2\frac{t'-t''}{\hbar}e^{t/\tau_{\rm reg}}\right) \times \nn\\
+& \quad \times \exp\left[-\left(\frac{t'-t''}{\tau_\trunc }\right)^2+2i\frac{t''}{\tau_{\rm leak}}
 \left(\frac{t'-t''}{\tau_\trunc }\right)\right] \nn\\
-&=& m_{\rm B}\left(e^{t/\tau_{\rm reg}}-1\right) +\frac{b}{Ng}
-\langle \hat s_y(0)\rangle e^{t/\tau_\trunc}; \EEA the terms in
+&= m_{\rm B}\left(e^{t/\tau_{\rm reg}}-1\right) +\frac{b}{Ng}
+\langle \hat s_y(0)\rangle e^{t/\tau_\trunc}; \end{align} 
+the terms in
 $b^2$ cancel out. As in (\ref{syb1}), (\ref{syb2}) the correlation
 $\langle\hat s_z\hat m(t)\rangle$ is weaker by a factor $\sqrt{N}$
 than the expectation value $\langle\hat s_z(t)\rangle$.
@@ -9426,6 +9436,7 @@ leakage delay.
 
 }%EndZeText
 
+\newpage
 
 \subsubsection{Switching on and off the system-apparatus interaction}
 \label{section.8.2.5}
@@ -9541,8 +9552,6 @@ H_{\rm A'}$ of the second apparatus A$^\prime$, analogous to $\hat H_{\rm
 A}=\hat H_{\rm M}+\hat H_{\rm B}+\hat H_{\rm MB}$, with
 magnetization $m'=(1/N')\sum_{n=1}^{N'} \hat\sigma_x'{}^{(n)}$, and
 the coupling term
-
-
  \begin{equation} 
  \label{HSAprime}
   \hat H_{\rm SA'}=-N'g'\hat s_x\hat m' \nn 
@@ -9560,8 +9569,6 @@ $m$ and $m'$ behave as random variables. However, since the functions $P_{ij}$ a
 terms of $P_{{\rm MM}'}(m,m',t)=P_{\uparrow\uparrow}+P_{\downarrow\downarrow}$, which describes the joint probability distribution of $m$ and $m'$, and
 of the set $C_a(m,m',t)$ defined for $a=x,y$ and $z$ by (\ref{P->C}), which describe the correlations between $\hat s_a$ and the two magnets M and  M$'$. 
 The density operator $\hat D(t)$ of S + M +  M$'$ generalizing (\ref{Rij}), with (\ref{Pdis2cont}), (\ref{RijP}) and  (\ref{P->C}), is
-
- 
 \begin{equation}  \label{dop} 
 \hat D(t)=\frac{2}{NN'G(\hat m)G(\hat m')}\left[ P_{{\rm MM}'}(\hat m,\hat m',t)+{\bf C}(\hat m,\hat m',t)\cdot\hat{\bf s}\right]. \nn
 \end{equation}  
@@ -9569,7 +9576,6 @@ The density operator $\hat D(t)$ of S + M +  M$'$ generalizing (\ref{Rij}), with
  functions $P_{{\rm MM}'}(m,m',t)$ and ${\bf C}(m,m',t)$ which parametrize $\hat D(t)$. The initial state $\hat D(0)$ is factorized as $\hat r(0)\otimes
 \hat R_{\rm M}(0)\otimes \hat R_{\rm M^\prime}(0)$, where $\hat R_{\rm M}(0)$ and $\hat R_{\rm M^\prime}(0)$ describe the
 metastable paramagnetic states (\ref{HF0}) of M and M$^\prime$, so that the initial conditions are
-
 \begin{equation}  \label{initP} 
 P_{{\rm MM}'}(m,m',0)=P_{\rm M}(m,0)P_{{\rm M}'}(m',0),\qquad {\bf C}(m,m',0)=P_{{\rm MM}'}(m,m',0)\langle\hat {\bf s}(0)\rangle, 
 \end{equation}  
@@ -9582,9 +9588,11 @@ On the one hand, for given $m$ and $m'$, the coupling $\hat H_{\rm SA}+\hat H_{\
 magnets M and M$^\prime$ behaves as a magnetic field ${\bf b}$ applied to S. This effective field is equal to
 
 \begin{equation}   \label{efffield} 
-{\bf b}(m,m')=\frac{2Ngm}{\hbar}\hat{\bf z}+\frac{2N'g'm'}{\hbar}\hat{\bf x}=b\hat {\bf u},  \qquad 
-b(m,m')\equiv  |{\bf b}(m,m')|=\frac{2}{\hbar}\sqrt{N^2g^2m^2+N'{}^2g'{}^2m'{}^2},
- \end{equation}
+{\bf b}(m,m')=\frac{2Ngm}{\hbar}\hat{\bf z}+\frac{2N'g'm'}{\hbar}\hat{\bf x}=b\hat {\bf u},
+\end{equation}
+\[ 
+b(m,m')\equiv  |{\bf b}(m,m')|=\frac{2}{\hbar}\sqrt{N^2g^2m^2+N'{}^2g'{}^2m'{}^2}
+\]
  where $\hat{\bf z}$ and $\hat{\bf x}$ are the unit vectors in the $z$- and $x$-direction, respectively. This yields to $\partial{\bf C}/\partial t$ the contribution
 
 \begin{equation}  
@@ -9763,8 +9771,6 @@ beyond the interval $[\frac{1}{4}(1-\lambda),\frac{1}{4}(1+\lambda)]$.  The limi
 indications is needed to reconcile the classical nature of these probabilities with the peculiarities of the quantum probabilities of
 S that arise from non commutation.  It also sets limitations on the  precision of the measurement.
 
-\vspace{3mm}
-
 Motivated by the physics of spin-orbit interaction in solids,  Sokolovski and Sherman recently studied a model related to (\ref{HSAprime})~\cite{A7}.
 Two components of the spin $\half$ couple not with collective magnetizations as in (\ref{HSAprime}), but with the
 components of the momentum (the proper kinetic energy is neglected so that these are the only two terms in the Hamiltonian). The motivation
@@ -9841,7 +9847,6 @@ of measurements, but as a consequence of a theoretical analysis of the ordinary 
 
 
  }%EndZeText
-
 
  \renewcommand{\thesection}{\arabic{section}}
 \section{Analysis of the results}
@@ -10187,7 +10192,6 @@ into blocks with definite value $s_z=\uparrow,\downarrow$ of the tested spin com
 The first stage of the measurement process is the truncation, defined as the disappearance 
 of the off-diagonal blocks $\hat{\cal R}_{\uparrow\downarrow}$ and $\hat{\cal R}_{\downarrow\uparrow}$
 of the full density matrix (section~\ref{section.5}). It takes place during the {\it truncation time}
-
 \begin{equation}  \label{taured9}
 \tau_\trunc=\frac{\hbar}{\sqrt{2N}\delta_0g}, 
 \end{equation} 
@@ -10217,7 +10221,6 @@ $\hat H_{\rm SA}$ (section~\ref{section.5.3.2}).
 If the total Hamiltonian of S + A did reduce to the coupling $\hat H_{\rm SA}=-Ng\hat s_z\hat m$ which 
 produces the above behavior, the truncation would be provisional,  since S + A would periodically
 return to its initial state with the {\it recurrence time}
-
 \begin{equation}  \tau_{\rm recur}=\frac{\pi\hbar}{2g},
 \end{equation} 
 much larger than $\tau_\trunc$ (section~\ref{section.5.3.1}).  As in spin-echo experiments, the extremely small but extremely numerous correlations
@@ -10232,7 +10235,6 @@ in the coupling constants $g_n$ between S and each spin of the magnet M. The Ham
 characteristic time $\tau_\trunc$, but recurrences are now ruled out owing to the dispersion of
 the $g_n$, which produces an extra damping as $\exp[-(t/\tau_{\rm irrev}^{\rm M})^2]$.
 The {\it irreversibility time induced by the spreading} $\delta g$ in the spin-magnet couplings, 
-
 \begin{equation}  \tau_{\rm irrev}^{\rm M}=\frac{\hbar}{\sqrt{2N}\delta g}, 
 \end{equation} 
 is intermediate between $\tau_\trunc$ and $\tau_{\rm recur}$ provided $\delta g$ is sufficiently large, viz. $g/\hspace{-1mm}\sqrt{N}\ll\delta g \ll g$. 
@@ -10245,7 +10247,6 @@ An alternative mechanism can also rule out any recurrence, even if the couplings
 all equal (subsection \ref{section.6.2}). In this case, the required irreversibility is induced by the bath,
 which produces an extra decay, as $\exp[- N B(t)]$, of the off-diagonal blocks (the shape of $B(t)$ is shown in Fig 6.1). 
 The initial truncation of section \ref{fin5}, for $t\ll1/\Gamma$, is not affected by the interaction with the bath if $N B(\tau_\trunc)\ll1$, that is, if 
-
 \BEQ
                 \frac{\gamma \hbar^2 \Gamma^2}{ 8 \pi N \delta_0^4 g^2}\ll1, 
                 \label{9.6bis}
@@ -12062,7 +12063,7 @@ To follow the fate of the subensemble $\scriptE_\sub$, we have to solve the equa
 The situation is the same as in section \ref{fin5}, except for the replacement of the initial condition $\scriptD(0)$ by $\scriptD_\sub (t_\mysplit)$. 
 In case the truncation mechanisms of sections 5 and 6 are effective, the elements present in the off-diagonal blocks of 
 $\scriptD_\sub(t)$ disappear over the short time scale $\tau_\trunc$, as they did for $\scriptD(t)$. The state $\scriptD_\sub(t)$ is thus dynamically 
-unstable against truncation. Later on, the diagonal blocks that remain after this relaxation will evolve as in section 7,
+unstable against truncation. Later on, the diagonal blocks that remain after this relaxation will evolve as in section \ref{fin7},
 and give rise to ferromagnetic states for M,  so that  $\scriptD_\sub(t_{\rm f})$ will eventually reach the form (\ref{12hex}).
 
 Unfortunately, the truncation mechanism based on the coupling between S and M is not efficient for all possible initial states $\scriptD_\sub(t_{\mysplit})$. 
@@ -12734,7 +12735,7 @@ $ \begin{array}{ccc@{\ }l} \textrm{} \\ \textrm{}\end{array}$
 \caption{The steps of an ideal measurement in the Curie--Weiss model. The preparation (sections \ref{section.3.3.3} and \ref{section.7.3.2}) brings the magnetic dot into
  its metastable paramagnetic state. The truncation (sections 5 and 6) eliminates the off-diagonal blocks of the density matrix of S + A describing 
  the full set of measurements. It is governed initially by the coupling $g$ between S and M, and it becomes permanent later on owing to two alternative
- mechanisms, either randomness of the S--M coupling or bath-induced decoherence. The registration (section 7), defined as the establishment of 
+ mechanisms, either randomness of the S--M coupling or bath-induced decoherence. The registration (section \ref{fin7}), defined as the establishment of 
  correlations between the system and the pointer for the full set of runs, accompanies the transition of the dot into one of its stable ferromagnetic states, depending 
  on the diagonal sector of the density matrix. The time scales (subsection 9.3) satisfy $\tau_{\rm trunc}^{\rm M;B} \ll\tau_{\rm irrev} \ll \tau_{\rm reg}$. 
  In contrast with the previous steps which refer to statistical properties of the full ensemble of runs of the measurement, the establishment of the 
@@ -13363,7 +13364,7 @@ it may therefore be effective only after registration. Of course, registration i
   tested system. This change of A must be {\it detectable}:  We should be able to {\it read, print or process} the results registered by the pointer,
   so that they can be analyzed by ``automatic observers''. 
   In the Curie-Weiss model, the apparatus simulates a magnetic memory, and, under the conditions of subsection 9.4, 
-  it  satisfies these properties required for registrations (section 7).  The apparatus is {\it faithful}, since the probability of a wrong registration, 
+  it  satisfies these properties required for registrations (section \ref{fin7}).  The apparatus is {\it faithful}, since the probability of a wrong registration, 
   in which the distribution $P_{\uparrow\uparrow}(m, \tau_{\rm reg})$ would be sizeable for negative values of $m$, 
   is negligible, though it does not vanish in a mathematical sense. The registration is {\it robust} since both ferromagnetic states 
   represented by density operators yielding magnetizations located around 
@@ -13393,7 +13394,7 @@ end of the process to a {\it further, macroscopic apparatus} ensuring amplificat
 states characterized within negligible fluctuation by the value $A_i$ of the pointer observable $\hat A$. 
 (In the Curie-Weiss model, $A_i\simeq\pm \,m_{\rm F}$ is semiclassical, while $s_i=\pm 1$ is quantal).
 This crucial point has been established in section \ref{fin11}. Theoretically, nothing prevents us from imagining that the pointer M lies in a quantum state 
-including coherences across $m=m_{\rm F}$ and $-m_{\rm F}$. For the full ensemble $\scriptE$ (section 7), such a situation does not occur during 
+including coherences across $m=m_{\rm F}$ and $-m_{\rm F}$. For the full ensemble $\scriptE$ (section \ref{fin7}), such a situation does not occur during 
 the slow registration process due to the spin-apparatus interaction which creates complete correlations.  For any subensemble $\scriptE_{\rm sub}$, 
 coherences might exist near the end of the process, but according to section \ref{fin11}, they would rapidly disappear, owing to the large size of M and to suitable weak 
 interactions within the apparatus (sections \ref{fin11.2.3} and \ref{fin11.2.4-5}). The correlations between the signs of $s_z$ and of $m$ produced during the registration, and the uniqueness 
@@ -13979,21 +13980,20 @@ $|\hspace{-0.7mm}\down\rangle\langle\up\hspace{-0.7mm}| \otimes |\hspace{-0.6mm}
 
 \ZeText{
  
-  The evolution of the {\it diagonal observables} in the Heisenberg picture is analogous to the registration of section 7, but it is represented by more 
+  The evolution of the {\it diagonal observables} in the Heisenberg picture is analogous to the registration of section \ref{fin7}, but it is represented by more 
  general equations than in the Schr\"odinger picture.
  Indeed, denoting  by $\delta_{\hat m, m}$ the projection operator on the eigenspace associated with the eigenvalue $m$ of $\hat m$, 
  we now have in the sector $\up\up$ to look at the dynamics of 
  the time-dependent observables $\hat \Pi_\uparrow \delta_{\hat m, m} (t,0)$, instead of the dynamics of their expectation values 
- $P^{\rm dis}_{\uparrow\up} (m,t)$ in the specific state $\hat D(0)$ of S + M as in section 7. 
+ $P^{\rm dis}_{\uparrow\up} (m,t)$ in the specific state $\hat D(0)$ of S + M as in section \ref{fin7}. 
  The solution of the equations of motion has the form
-
 \BEQ \label{12.15}
 \hat \Pi_\up \delta_{\hat m, m} (t_{\rm f}, 0) = \sum_{m'} K_\up(m, m') \hat\Pi_\up \delta_{\hat m, m'}.  
 \EEQ
 The kernel $K_\up(m, m')$ represents the transition probability of the random order parameter $\hat m$ from its eigenvalue $m'$ at the time 
 $0$ to its eigenvalue $m$ at the time $t_{\rm f}$,  under the effect of the bath and of a field $+g$. 
 It is obtained by taking the long-time limit of the Green's function defined by Eq. (7.58), and we infer
-its properties from the outcomes of section 7. As $m'$ is arbitrary, we must deal here with a 
+its properties from the outcomes of section \ref{fin7}. As $m'$ is arbitrary, we must deal here with a 
 {\it bifurcation} (as in subsection 7.3). For $m'$ larger than some negative threshold, $K_\up(m, m')$ is concentrated near $m \simeq +m_{\rm F}$;
  this will occur in particular if $m'$ is small, of order $1/\sqrt{N}$. However, if $m'$ is negative with sufficiently large $|m'|$,  it
  will be sent towards $m=-m_{\rm F}$. Likewise, $K_\down (m, m')$ is concentrated around $m \simeq -m_{\rm F}$ 
