--- a/1107.2138/Opus-Magnum-final.tex
+++ b/1107.2138/Opus-Magnum-final.tex
@@ -1555,8 +1555,7 @@ others) Bohr is presented by Grangier in Refs. \cite{X2,X3}.
  
  
 
-Everitt, Munro and Spiller discuss a measurement model which, while fully quantum mechanical, makes use of analogy with classical features of the apparatus 
-~\cite{Everitt}.  The model consists of a two-level system (the measured system), the apparatus, which is a one-dimensional quartic oscillator under external driving,
+Everitt, Munro and Spiller discuss a measurement model which, while fully quantum mechanical, makes use of analogy with classical features of the apparatus \cite{Everitt}.  The model consists of a two-level system (the measured system), the apparatus, which is a one-dimensional quartic oscillator under external driving,
 and an environment whose influence on the $(\textrm{system}\, + \, \textrm{apparatus})$ is described within the Lindblad master-equation approach and its quantum state diffusion 
 unravelling~\cite{Percival}. The main point of this work is that the apparatus can display the chaotic features of a damped forced non-linear oscillator 
 (and is thus not related to Hamiltonian chaos). Everitt, Munro and Spiller make use of this point for the following reason: The feature of chaos allows one 
