--- a/1612.09375-ams-ish/cfnt.tex
+++ b/1612.09375-ams-ish/cfnt.tex
@@ -279,7 +279,7 @@ category the condition that $\cat{A}(A, B) \cap \cat{A}(A', B') =
 \begin{examples}[Categories \:of \:mathematical \:structures]        
 \label{egs:cats-of}
 % 
-\begin{enumerate}[(b)]
+\begin{enumerate}[(c)]
 \item 
 There is a category $\Set$%
 %
