--- a/1612.09375/BasicCategoryTheory.tex
+++ b/1612.09375/BasicCategoryTheory.tex
@@ -35,6 +35,7 @@ bookmarksopenlevel=10, bookmarksdepth=3
 
 % different \sum and also fixes underbraces
 \input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
 
 % optional
 
