--- a/2001.04383/compression_arXiv_v1.tex
+++ b/2001.04383/compression_arXiv_v1.tex
@@ -536,7 +536,7 @@ Our result has interesting consequences for long-standing conjectures in quantum
 \end{equation}
 Then \emph{Tsirelson's problem} asks if, for all $n,k$, the sets $C_{qa}(n,k)$ and $C_{qc}(n,k)$ are equal. 
 Using results from~\cite{navascues2008convergent} we give integer $n,k$ and an explicit linear function $\ell$ on $\R^{n^2k^2}$ such that 
-\[ \sup_{p\in C_{qc}(n,k)} \big|\ell(p)\big| \,=\,1\;,\qquad\text{but}\qquad \sup_{p\in C_{qa}(n,k)} \big|\ell(p)\big| \,\leq\,\frac{1}{2}\;,\]
+\[ \sup_{p\in C_{qc}(n,k)} \big|\ell(p)\big| \,=\,1\;,\quad\text{but}\,\, \sup_{p\in C_{qa}(n,k)} \big|\ell(p)\big| \,\leq\,\frac{1}{2}\;,\]
 which implies that $C_{qa}(n,k)\neq C_{qc}(n,k)$. 
 By an implication of Fritz~\cite{fritz2012tsirelson} and Junge et al.~\cite{junge2011connes} we further obtain that Connes' Embedding Conjecture~\cite{connes1976classification} is false; in other words, there exist type II$_1$ von Neumann factors that do not embed in an ultrapower of the hyperfinite II$_1$ factor. We explain these connections in more detail in Section~\ref{sec:consequences} below.
 
