--- a/helpers/fixarxiv-palatino.tex
+++ b/helpers/fixarxiv-palatino.tex
@@ -24,6 +24,8 @@ bookmarksopenlevel=10
 \input{../helpers/fix-underbrace.tex}
 
 \usepackage[small]{titlesec}
+\usepackage{cite}
+
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
 %\input{../helpers/psu-plain-titles.tex}
