clean up various things.

--- a/1005.3035/essay10.tex
+++ b/1005.3035/essay10.tex
@@ -104,7 +104,7 @@ bookmarksopenlevel=10
 
 \vspace*{20mm}
 \begin{center}
-{\Large \bf Building up spacetime with quantum entanglement}
+{\Large  Building up spacetime with Quantum Entanglement}
 
 \vspace*{15mm}
 \vspace*{1mm}
