--- a/1609.00026/Lectures.tex
+++ b/1609.00026/Lectures.tex
@@ -60,7 +60,7 @@ bookmarksopenlevel=10
       }  % end of \vbox
 \vspace*{20mm}
 \begin{center}
-{\Large \bf Lectures on Gravity and Entanglement}
+{\Large  Lectures on Gravity and Entanglement}
 
 \vspace*{15mm}
 \vspace*{1mm}
