--- a/1602.04182/feynman_for_beginners.tex
+++ b/1602.04182/feynman_for_beginners.tex
@@ -3,7 +3,7 @@
 % Tutorial: Feynman diagrams through exercises
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\documentclass[twoside,a4paper,12pt]{article}
+\documentclass[a4paper,12pt]{article}
 %\usepackage[colorlinks=true,linkcolor=blue,
             %urlcolor=blue,citecolor=blue]{hyperref}
 %\usepackage{hyperref}
@@ -11,7 +11,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[colorlinks=true
+,breaklinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
 ,citecolor=blue
@@ -24,11 +26,18 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-%\usepackage{amssymb}
-%\usepackage{amsmath,amsthm,amscd,amssymb}
-%\usepackage[noBBpl]{mathpazo}
-\linespread{1.1}
-\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
 
 
 \hypersetup{
@@ -115,29 +124,20 @@ bookmarksopenlevel=10
 \renewcommand{\thefootnote}{\fnsymbol{footnote}}
 
 %% BEGIN Fancy headings
-\usepackage{fancyhdr}
-\pagestyle{fancy}
-    \fancyhf{}
-    \fancyhead[RO,LE]{\bfseries \thepage}
-    \fancyhead[CO]{\rightmark}
-    \fancyhead[CE]{\leftmark}
-    \renewcommand{\headrulewidth}{0.4pt}
-\renewcommand{\sectionmark}[1]{\markboth{\thesection\hskip 8pt #1}
-                                        {\thesection\hskip 8pt #1}}
-\renewcommand{\subsectionmark}[1]{\relax}
+\pagestyle{plain}
 %% END Fancy headings
 
 \begin{document}
 
 %\thispagestyle{empty}
 
-\title{ \Huge \textbf{Feynman Diagrams for Beginners}\footnote{%
+\title{ \Huge {Feynman Diagrams for Beginners}\footnote{%
 Notes for the exercises at the
 \emph{Adriatic School on Particle Physics and Physics Informatics},
 11 -- 21 Sep 2001, Split, Croatia}
 }
 
-\author{\textbf{Krešimir Kumerički}\footnote{\scriptsize\texttt{kkumer@phy.hr}}\\[2ex]
+\author{{Krešimir Kumerički}\footnote{\scriptsize\texttt{kkumer@phy.hr}}\\[2ex]
 \small Department of Physics, Faculty of Science, University of Zagreb, Croatia}
 \date{}
 \maketitle
