--- a/1602.04182/feynman_for_beginners.tex
+++ b/1602.04182/feynman_for_beginners.tex
@@ -3,7 +3,7 @@
 % Tutorial: Feynman diagrams through exercises
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\documentclass[a4paper,12pt]{article}
+\documentclass[a4paper,11pt]{article}
 %\usepackage[colorlinks=true,linkcolor=blue,
             %urlcolor=blue,citecolor=blue]{hyperref}
 %\usepackage{hyperref}
@@ -154,6 +154,8 @@ Notes for the exercises at the
 \end{abstract}      
 
 \tableofcontents
+
+\newpage
 
 \section{Natural units}
 
