--- a/1209.6213/signs-ijmpa_arxiv_v2.tex
+++ b/1209.6213/signs-ijmpa_arxiv_v2.tex
@@ -9,6 +9,8 @@
 \def\slash#1{#1\!\!\! /}
 \def\h#1{\hskip #1 mm}
 
+\usepackage[papersize={5.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\pagestyle{plain}
 
 \begin{document}
 
@@ -483,7 +485,6 @@ we find the following terms quadratic in the fields:
 + \frac{1}{4} g^2 v^2 W_\mu^+  W^{-\mu}
 \nonumber\\[+2mm]
 & &
-\hspace{5mm} 
 + \frac{1}{2} v\, \partial^\mu \varphi_Z \left(\eta' g' B_\mu -\eta\, g W_\mu^{3}
 \right) - \frac{i}{2}\eta\, g v W_\mu^- \partial^\mu \varphi^+ 
 + \frac{i}{2}\eta\, g v W_\mu^+ \partial^\mu \varphi^- \ .
