--- a/hep-ph-9812357/tools.tex
+++ b/hep-ph-9812357/tools.tex
@@ -75,15 +75,16 @@ Dimensional regularization, like any other regularization
 scheme, introduces an arbitrary mass parameter, usually denoted
 by $\mu$. This becomes clear by considering, for example, the
 one-loop integral
-\begin{eqnarray}
+\begin{multline}
   \frac{1}{i}\int {\dd^Dp\over (2\pi)^D} 
   {1\over  (-\left(q-p\right)^2)^a 
-           \left(-p^2\right)^b} &=& {(-1/q^2)^{a+b-D/2}\over (4\pi)^{D/2}}
+           \left(-p^2\right)^b} = \\
+           {(-1/q^2)^{a+b-D/2}\over (4\pi)^{D/2}}
   \frac{\Gamma(a+b-D/2)\Gamma(D/2-a)\Gamma(D/2-b)}
        {\Gamma(D-a-b)\Gamma(a)\Gamma(b)}
 \,,
 \label{eqml1loop}
-\end{eqnarray}
+\end{multline}
 where $\Gamma(x)$ is Euler's gamma function. Note that $a$
 and $b$ are not necessarily integer.
 The Laurent-series of the r.h.s.\ with respect to $\varepsilon$
@@ -226,16 +227,16 @@ f(p_5,\ldots) = \frac{p_5^{\mu}}
 \end{equation}
 Performing the differentiation and using momentum conservation at each
 vertex one derives the following equation:
-\begin{eqnarray}
+\begin{multline}
 \Big[ 
     - n_3 {\bf 3^+}\left({\bf 5^-}-{\bf 4^-}+m_4^2-m_5^2-m_3^2\right)
     - n_2 {\bf 2^+}\left({\bf 5^-}-{\bf 1^-}+m_1^2-m_5^2-m_2^2\right)
-\nonumber\\
+\\
     + D-2n_5-n_3-n_2+2n_5 m_5^2 {\bf 5^+} 
-\Big]\, I(n_1,\ldots,n_5) &=& 0
+\Big]\, I(n_1,\ldots,n_5) = 0
 \,,
 \label{eqtrianglerec}
-\end{eqnarray}
+\end{multline}
 where the operators ${\bf 1^{\pm}}, {\bf 2^{\pm}}, \ldots$ are used in
 order to raise and lower the indices: ${\bf I^{\pm}}I(\ldots,n_i,\ldots)
 = I(\ldots,n_i\pm 1,\ldots)$.  In Eq.~(\ref{eqtrianglerec}), generally
@@ -666,36 +667,37 @@ i{e^{-i\,{p^2\over A}}\over (4\pi i A)^{D/2}}\,,
 %
 one obtains
 %
-\begin{eqnarray}\label{eq::Ifinal}
-&& \llangle {1\over D_0 D_1 D_2} e^{i\sprod{a}{k}}\rrangle_D =
+\begin{multline}\label{eq::Ifinal}
+ \llangle {1\over D_0 D_1 D_2} e^{i\sprod{a}{k}}\rrangle_D =
 {i\over (4\pi i)^{D/2}}\int_0^\infty \dd\vec\alpha \,
-{e^{-i\left(\alpha_0m_0^2 + \alpha_1m_1^2 + \alpha_2m_2^2\right)} \over 
+{e^{-i(\alpha_0m_0^2 + \alpha_1m_1^2 + \alpha_2m_2^2)} \over 
   (\alpha_0 + \alpha_1 + \alpha_2)^{D/2}}  
-\exp\bigg\{-i\Big[-\alpha_1(\alpha_0 + \alpha_2)p_1^2 
-\nonumber\\&& \mbox{\hspace{3ex}} -
-  \alpha_2(\alpha_0 + \alpha_1)p_2^2 +
+\exp\bigg\{\!-i\bigl[\!-\alpha_1(\alpha_0 + \alpha_2)p_1^2 
+\\- \alpha_2(\alpha_0 + \alpha_1)p_2^2  +
   2\,\alpha_1\alpha_2
-  \sprod{p_1}{p_2} + \alpha_1\,\sprod{p_1}{a} +
-  \alpha_2\,\sprod{p_2}{a} + a^2/4\Big]/(\alpha_0 
+  \sprod{p_1}{p_2} + 
+ \alpha_1\,\sprod{p_1}{a} +
+  \alpha_2\,\sprod{p_2}{a} + a^2/4\bigr]
+  /(\alpha_0 
   + \alpha_1 + \alpha_2)\bigg\}\,.
-\end{eqnarray}
+\end{multline}
 %
 Inserting (\ref{eq::Ifinal}) into (\ref{eq::tart}) and explicitly
 performing the differentiations yields
 %
-\begin{eqnarray}
-&&\llangle{k_\mu k_\nu\over D_0 D_1 D_2}\rrangle_D =
+\begin{multline}
+\llangle{k_\mu k_\nu\over D_0 D_1 D_2}\rrangle_D =
 {i\over (4\pi i)^{D/2}}\int\dd \vec\alpha\,
 {e^{-i\left(\alpha_0m_0^2 + \alpha_1m_1^2 + \alpha_2m_2^2\right)}
   \over
   (\alpha_0 + \alpha_1 + \alpha_2)^{D/2+2}}
 (\alpha_1 p_1 + \alpha_2 p_2)_\mu (\alpha_1 p_1 + \alpha_2 p_2)_\nu
-\, \times\nonumber\\&&\mbox{\hspace{6ex}}
+\, \times\\
 \exp\bigg\{-i\Big[-\alpha_1(\alpha_0 + \alpha_2)p_1^2 -
 \alpha_2(\alpha_0 + \alpha_1)p_2^2 + 2\,\alpha_1\alpha_2\,
   \sprod{p_1}{p_2} \Big]/(\alpha_0 + \alpha_1 + \alpha_2)\bigg\}\,.
 \label{eq::alpha-param}
-\end{eqnarray}
+\end{multline}
 %
 The technique to derive Eq.~(\ref{eq::alpha-param}) and its
 generalization to arbitrary multi-loop diagrams is known since long (see,
