--- a/hep-ph-9812357/title.tex
+++ b/hep-ph-9812357/title.tex
@@ -12,11 +12,11 @@
 
 \author{{\sc R. Harlander}$^a$ and {\sc M. Steinhauser}$^b$
   \\[3em]
-  {\it a) Institut f\"ur Theoretische Teilchenphysik,
-      Universit\"at Karlsruhe, D-76128 Karlsruhe, Germany}
+   a) Institut f\"ur Theoretische Teilchenphysik,\\
+      Universit\"at Karlsruhe, D-76128 Karlsruhe, Germany
   \\[.5em]
-  {\it b) Institut f\"ur Theoretische Physik, Universit\"at
-      Bern, CH-3012 Bern, Switzerland}
+   b) Institut f\"ur Theoretische Physik, \\ Universit\"at
+      Bern, CH-3012 Bern, Switzerland
 }
 
 \date{}
