--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2020-01-20 14:03:00 -0500 
+%% Created for Pete Su at 2020-02-01 08:59:21 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Nomura:2018kia,
+	Archiveprefix = {arXiv},
+	Author = {Nomura, Yasunori},
+	Date-Added = {2020-02-01 08:59:18 -0500},
+	Date-Modified = {2020-02-01 08:59:18 -0500},
+	Doi = {10.1103/PhysRevD.99.086004},
+	Eprint = {1810.09453},
+	Journal = {Phys. Rev.},
+	Number = {8},
+	Pages = {086004},
+	Primaryclass = {hep-th},
+	Slaccitation = {%%CITATION = ARXIV:1810.09453;%%},
+	Title = {{Reanalyzing an Evaporating Black Hole}},
+	Volume = {D99},
+	Year = {2019},
+	Bdsk-Url-1 = {https://doi.org/10.1103/PhysRevD.99.086004}}
 
 @article{Allahverdyan:2011cx,
 	Archiveprefix = {arXiv},
